# StockSense

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
stocksense-backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  seed.py
stocksense-backend/app/: config.py  dependencies.py  main.py
stocksense-backend/app/api/v1/: ai.py  auth.py  backtests.py  holdings.py  optimization.py  portfolios.py  router.py  transactions.py  users.py
stocksense-backend/app/core/: exceptions.py  middleware.py  security.py
stocksense-backend/app/db/: base.py  session.py
stocksense-backend/app/models/: __init__.py  backtest.py  enums.py  holding.py  market_cache.py  portfolio.py  recommendation.py  transaction.py  user.py
stocksense-backend/app/schemas/: ai.py  analysis.py  auth.py  backtest.py  holding.py  optimization.py  portfolio.py  recommendation.py  response.py  transaction.py  user.py
stocksense-backend/app/services/: auth_service.py  portfolio_service.py
stocksense-backend/app/services/ai/: agents.py
stocksense-backend/app/services/analytics/: diversification.py  engine.py  health_score.py  risk.py
stocksense-backend/app/services/backtest/: metrics.py  simulator.py
stocksense-backend/migrations/: env.py
stocksense-backend/migrations/versions/: 148019091e64_create_initial_tables.py  7231c812cc46_initial_migration.py
stocksense-backend/tests/: conftest.py  test_ai.py  test_analytics.py  test_auth.py  test_backtest.py  test_optimization.py  test_portfolio.py
(+47 files in other folders)
